--- a/assets/styles/views/performance.scss
+++ b/assets/styles/views/performance.scss
@@ -51,14 +51,4 @@
     width: 100%;
     color: $color-grey-darkest
 }
-.mg-x-axis .label, 
-.mg-y-axis .label, 
-.mg-axis .label{
-    font-size: 1.5rem;
-    word-spacing: 5px;
-}
-.mg-x-axis text, .mg-y-axis text, .mg-histogram .axis text {
-    fill: black;
-    font-size: 1rem;
-    opacity: 1;
-}
+
